--- a/Students/juriy_shreder/others/les_2/package.json
+++ b/Students/juriy_shreder/others/les_2/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode development"
+    "build": "webpack --mode development",
+    "dev": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,8 @@
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
