--- a/Students/Shesterin_Aleksei/task2/package.json
+++ b/Students/Shesterin_Aleksei/task2/package.json
@@ -9,11 +9,16 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "css-loader": "^3.5.3",
+    "html-webpack-plugin": "^4.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode development",
+    "dev": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
