--- a/Students/juriy_shreder/project_/package.json
+++ b/Students/juriy_shreder/project_/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "juinit",
+  "name": "project",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
     "dev": "webpack-dev-server --open"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "keywords": [],
-  "description": "",
   "devDependencies": {
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
-    "popper.js": "^1.16.1"
+    "popper": "^1.0.1"
   }
 }
