--- a/Students/MikhailPetukhov/project/package.json
+++ b/Students/MikhailPetukhov/project/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server",
+	"api": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "nodemonConfig": { "ignore": ["*.json"] },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
@@ -18,6 +20,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "nodemon": "^2.0.3",
     "vue-loader": "^15.9.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
@@ -26,6 +29,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11"
