--- a/Students/Shesterin_Aleksei/task6/package.json
+++ b/Students/Shesterin_Aleksei/task6/package.json
@@ -17,6 +17,8 @@
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "vue-loader": "^15.9.2",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
